--- a/index.html
+++ b/index.html
@@ -1,52 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta name="description" content="Wonderwoman Cleaning – Reliable, powerful, and spotless cleaning services." />
-<title>Wonderwoman Cleaning</title>
-<link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Primary SEO -->
+  <title>Wonderwoman Cleaning | Professional House Cleaning in CITY, STATE</title>
+
+  <meta
+    name="description"
+    content="Wonderwoman Cleaning provides reliable residential, deep, and move-in/move-out cleaning services in CITY, STATE and surrounding areas. Get a free quote today."
+  />
+
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph (helps Google + social previews) -->
+  <meta property="og:title" content="Wonderwoman Cleaning | House Cleaning in CITY, STATE" />
+  <meta
+    property="og:description"
+    content="Professional, reliable cleaning services in CITY, STATE. Residential, deep cleaning, and office services."
+  />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://YOUR_USERNAME.github.io/wonderwoman-cleaning/" />
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
-<header class="hero">
-<h1>Wonderwoman Cleaning</h1>
-<p>Powerful. Reliable. Spotless.</p>
-<a href="#contact" class="btn">Get a Free Quote</a>
-</header>
+  <header class="hero">
+    <h1>Wonderwoman Cleaning</h1>
+    <p>Professional House Cleaning in <strong>CITY, STATE</strong></p>
+    <a href="#contact" class="btn">Get a Free Quote</a>
+  </header>
 
+  <section class="services">
+    <h2>Cleaning Services in CITY, STATE</h2>
+    <p class="location">
+      Proudly serving <strong>CITY, STATE</strong> and surrounding areas.
+    </p>
 
-<section class="services">
-<h2>Our Services</h2>
-<ul>
-<li>Residential Cleaning</li>
-<li>Deep Cleaning</li>
-<li>Move-In / Move-Out</li>
-<li>Office Cleaning</li>
-</ul>
-</section>
+    <ul>
+      <li>Residential House Cleaning</li>
+      <li>Deep Cleaning Services</li>
+      <li>Move-In / Move-Out Cleaning</li>
+      <li>Office & Small Business Cleaning</li>
+    </ul>
+  </section>
 
+  <section class="about">
+    <h2>Why Choose Wonderwoman Cleaning?</h2>
+    <p>
+      Wonderwoman Cleaning delivers dependable, high-quality cleaning services
+      for homes and offices throughout <strong>CITY, STATE</strong>.
+      We focus on attention to detail, consistency, and customer satisfaction.
+    </p>
+  </section>
 
-<section class="about">
-<h2>Why Wonderwoman Cleaning?</h2>
-<p>
-We deliver superhero-level cleaning with attention to detail, consistency,
-and care. Your space deserves nothing less.
-</p>
-</section>
+  <section class="contact" id="contact">
+    <h2>Contact Wonderwoman Cleaning</h2>
 
+    <p>
+      Serving <strong>CITY, STATE</strong><br />
+      Phone:
+      <a href="tel:+1PHONE_NUMBER">PHONE_NUMBER</a><br />
+      Email:
+      <a href="mailto:EMAIL_ADDRESS">EMAIL_ADDRESS</a>
+    </p>
+  </section>
 
-<section class="contact" id="contact">
-<h2>Contact Us</h2>
-<p>Email: <a href="mailto:wonderwomancleaning@example.com">wonderwomancleaning@example.com</a></p>
-<p>Phone: (555) 123-4567</p>
-</section>
+  <footer>
+    <p>
+      Wonderwoman Cleaning • House Cleaning Services in CITY, STATE
+    </p>
+    <p>&copy; 2026 Wonderwoman Cleaning</p>
+  </footer>
 
+  <!-- Local Business Structured Data -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "CleaningService",
+      "name": "Wonderwoman Cleaning",
+      "areaServed": {
+        "@type": "Place",
+        "name": "CITY, STATE"
+      },
+      "telephone": "+1PHONE_NUMBER",
+      "url": "https://YOUR_USERNAME.github.io/wonderwoman-cleaning/"
+    }
+  </script>
 
-<footer>
-<p>&copy; 2026 Wonderwoman Cleaning. All rights reserved.</p>
-</footer>
-
-
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
