added more info

--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Primary SEO -->
-  <title>Wonderwoman Cleaning | Professional House Cleaning in CITY, STATE</title>
+  <title>Wonderwoman Cleaning | Professional House Cleaning in Frenchtown, New Jersey</title>
 
   <meta
     name="description"
-    content="Wonderwoman Cleaning provides reliable residential, deep, and move-in/move-out cleaning services in CITY, STATE and surrounding areas. Get a free quote today."
+    content="Wonderwoman Cleaning provides reliable residential, deep, and move-in/move-out cleaning services in Frenchtown, New Jersey and surrounding areas. Get a free quote today."
   />
 
   <meta name="robots" content="index, follow" />
 
   <!-- Open Graph (helps Google + social previews) -->
-  <meta property="og:title" content="Wonderwoman Cleaning | House Cleaning in CITY, STATE" />
+  <meta property="og:title" content="Wonderwoman Cleaning | House Cleaning in Frenchtown, New Jersey" />
   <meta
     property="og:description"
-    content="Professional, reliable cleaning services in CITY, STATE. Residential, deep cleaning, and office services."
+    content="Professional, reliable cleaning services in Frenchtown, New Jersey. Residential, deep cleaning, and office services."
   />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://YOUR_USERNAME.github.io/wonderwoman-cleaning/" />
@@ -30,14 +30,14 @@
 <body>
   <header class="hero">
     <h1>Wonderwoman Cleaning</h1>
-    <p>Professional House Cleaning in <strong>CITY, STATE</strong></p>
+    <p>Professional House Cleaning in <strong>Frenchtown, New Jersey</strong></p>
     <a href="#contact" class="btn">Get a Free Quote</a>
   </header>
 
   <section class="services">
-    <h2>Cleaning Services in CITY, STATE</h2>
+    <h2>Cleaning Services in Frenchtown, New Jersey</h2>
     <p class="location">
-      Proudly serving <strong>CITY, STATE</strong> and surrounding areas.
+      Proudly serving <strong>Frenchtown, New Jersey</strong> and surrounding areas.
     </p>
 
     <ul>
@@ -52,7 +52,7 @@
     <h2>Why Choose Wonderwoman Cleaning?</h2>
     <p>
       Wonderwoman Cleaning delivers dependable, high-quality cleaning services
-      for homes and offices throughout <strong>CITY, STATE</strong>.
+      for homes and offices throughout <strong>Frenchtown, New Jersey</strong>.
       We focus on attention to detail, consistency, and customer satisfaction.
     </p>
   </section>
@@ -61,7 +61,7 @@
     <h2>Contact Wonderwoman Cleaning</h2>
 
     <p>
-      Serving <strong>CITY, STATE</strong><br />
+      Serving <strong>Frenchtown, New Jersey</strong><br />
       Phone:
       <a href="tel:+1PHONE_NUMBER">PHONE_NUMBER</a><br />
       Email:
@@ -71,7 +71,7 @@
 
   <footer>
     <p>
-      Wonderwoman Cleaning • House Cleaning Services in CITY, STATE
+      Wonderwoman Cleaning • House Cleaning Services in Frenchtown, New Jersey
     </p>
     <p>&copy; 2026 Wonderwoman Cleaning</p>
   </footer>
@@ -84,7 +84,7 @@
       "name": "Wonderwoman Cleaning",
       "areaServed": {
         "@type": "Place",
-        "name": "CITY, STATE"
+        "name": "Frenchtown, New Jersey"
       },
       "telephone": "+1PHONE_NUMBER",
       "url": "https://YOUR_USERNAME.github.io/wonderwoman-cleaning/"
