--- a/index.html
+++ b/index.html
@@ -4,79 +4,129 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Primary SEO -->
   <title>Wonderwoman Cleaning | Professional House Cleaning in Frenchtown, New Jersey</title>
 
   <meta
     name="description"
-    content="Wonderwoman Cleaning provides reliable residential, deep, and move-in/move-out cleaning services in Frenchtown, New Jersey and surrounding areas. Get a free quote today."
+    content="Wonderwoman Cleaning offers professional residential and deep cleaning services in Frenchtown, New Jersey. Reliable, detailed, and stress-free cleaning."
   />
 
   <meta name="robots" content="index, follow" />
 
-  <!-- Open Graph (helps Google + social previews) -->
-  <meta property="og:title" content="Wonderwoman Cleaning | House Cleaning in Frenchtown, New Jersey" />
+  <!-- Open Graph -->
+  <meta property="og:title" content="Wonderwoman Cleaning | Frenchtown, New Jersey" />
   <meta
     property="og:description"
-    content="Professional, reliable cleaning services in Frenchtown, New Jersey. Residential, deep cleaning, and office services."
+    content="Reliable house cleaning services for homes and small businesses in Frenchtown, New Jersey."
   />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://YOUR_USERNAME.github.io/wonderwoman-cleaning/" />
 
-  <!-- Styles -->
   <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
+  <!-- HERO -->
   <header class="hero">
-    <h1>Wonderwoman Cleaning</h1>
-    <p>Professional House Cleaning in <strong>Frenchtown, New Jersey</strong></p>
-    <a href="#contact" class="btn">Get a Free Quote</a>
+    <div class="hero-content">
+      <h1>Wonderwoman Cleaning</h1>
+      <p>Professional Home Cleaning You Can Trust</p>
+      <p class="hero-location">Serving Frenchtown & surrounding New Jersey areas</p>
+      <a href="#contact" class="btn">Get a Free Quote</a>
+    </div>
   </header>
 
+  <!-- SERVICES -->
   <section class="services">
-    <h2>Cleaning Services in Frenchtown, New Jersey</h2>
-    <p class="location">
-      Proudly serving <strong>Frenchtown, New Jersey</strong> and surrounding areas.
+    <h2>Our Cleaning Services</h2>
+    <p class="section-intro">
+      We provide dependable, detail-focused cleaning for homes and small businesses.
     </p>
 
-    <ul>
-      <li>Residential House Cleaning</li>
-      <li>Deep Cleaning Services</li>
-      <li>Move-In / Move-Out Cleaning</li>
-      <li>Office & Small Business Cleaning</li>
-    </ul>
+    <div class="service-grid">
+      <div class="service-card">
+        <h3>Residential Cleaning</h3>
+        <p>Routine and one-time cleanings to keep your home fresh and comfortable.</p>
+      </div>
+
+      <div class="service-card">
+        <h3>Deep Cleaning</h3>
+        <p>Thorough top-to-bottom cleaning for kitchens, bathrooms, and living spaces.</p>
+      </div>
+
+      <div class="service-card">
+        <h3>Move-In / Move-Out</h3>
+        <p>Perfect for transitions, rentals, and preparing a space for new occupants.</p>
+      </div>
+
+      <div class="service-card">
+        <h3>Office Cleaning</h3>
+        <p>Reliable cleaning for offices and small commercial spaces.</p>
+      </div>
+    </div>
   </section>
 
+  <!-- ABOUT -->
   <section class="about">
-    <h2>Why Choose Wonderwoman Cleaning?</h2>
-    <p>
-      Wonderwoman Cleaning delivers dependable, high-quality cleaning services
-      for homes and offices throughout <strong>Frenchtown, New Jersey</strong>.
-      We focus on attention to detail, consistency, and customer satisfaction.
-    </p>
+    <div class="about-content">
+      <div class="about-text">
+        <h2>Why Choose Wonderwoman Cleaning?</h2>
+        <p>
+          Wonderwoman Cleaning is built on reliability, attention to detail,
+          and respect for your space. We take pride in delivering consistent,
+          high-quality results every visit.
+        </p>
+        <ul>
+          <li>✔ Locally owned & operated</li>
+          <li>✔ Trusted, detail-focused service</li>
+          <li>✔ Flexible scheduling</li>
+          <li>✔ Satisfaction-focused cleaning</li>
+        </ul>
+      </div>
+
+      <!-- IMAGE PLACEHOLDER -->
+      <div class="about-image">
+        <!-- Replace src with real image later -->
+        <img src="images/about-placeholder.jpg" alt="Professional home cleaning service" />
+      </div>
+    </div>
   </section>
 
+  <!-- GALLERY -->
+  <section class="gallery">
+    <h2>Our Work</h2>
+    <p class="section-intro">
+      A glimpse at the spaces we’ve helped keep spotless.
+    </p>
+
+    <div class="gallery-grid">
+      <img src="images/clean1.jpg" alt="Clean kitchen" />
+      <img src="images/clean2.jpg" alt="Clean bathroom" />
+      <img src="images/clean3.jpg" alt="Clean living room" />
+    </div>
+  </section>
+
+  <!-- CONTACT -->
   <section class="contact" id="contact">
-    <h2>Contact Wonderwoman Cleaning</h2>
-
+    <h2>Get in Touch</h2>
     <p>
-      Serving <strong>Frenchtown, New Jersey</strong><br />
-      Phone:
-      <a href="tel:+1PHONE_NUMBER">PHONE_NUMBER</a><br />
-      Email:
-      <a href="mailto:EMAIL_ADDRESS">EMAIL_ADDRESS</a>
+      Looking for reliable cleaning services in Frenchtown, New Jersey?
+      Reach out today for a free quote.
+    </p>
+
+    <p class="contact-details">
+      📞 <a href="tel:+1PHONE_NUMBER">PHONE_NUMBER</a><br />
+      ✉️ <a href="mailto:EMAIL_ADDRESS">EMAIL_ADDRESS</a>
     </p>
   </section>
 
+  <!-- FOOTER -->
   <footer>
-    <p>
-      Wonderwoman Cleaning • House Cleaning Services in Frenchtown, New Jersey
-    </p>
+    <p>Wonderwoman Cleaning • Frenchtown, New Jersey</p>
     <p>&copy; 2026 Wonderwoman Cleaning</p>
   </footer>
 
-  <!-- Local Business Structured Data -->
+  <!-- Local Business Schema -->
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
