--- a/index.html
+++ b/index.html
@@ -5,142 +5,117 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <title>Wonderwoman Cleaning | Professional House Cleaning in Frenchtown, New Jersey</title>
-
   <meta
     name="description"
-    content="Wonderwoman Cleaning offers professional residential and deep cleaning services in Frenchtown, New Jersey. Reliable, detailed, and stress-free cleaning."
+    content="Wonderwoman Cleaning offers professional house cleaning services in Frenchtown, New Jersey. Reliable, thorough, and detail-oriented."
   />
 
-  <meta name="robots" content="index, follow" />
-
-  <!-- Open Graph -->
-  <meta property="og:title" content="Wonderwoman Cleaning | Frenchtown, New Jersey" />
-  <meta
-    property="og:description"
-    content="Reliable house cleaning services for homes and small businesses in Frenchtown, New Jersey."
-  />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://YOUR_USERNAME.github.io/wonderwoman-cleaning/" />
-
-  <link rel="stylesheet" href="styles.css" />
+  <!-- Tailwind via CDN -->
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
+<body class="text-gray-800 font-sans">
 
-<body>
   <!-- HERO -->
-  <header class="hero">
-    <div class="hero-content">
-      <h1>Wonderwoman Cleaning</h1>
-      <p>Professional Home Cleaning You Can Trust</p>
-      <p class="hero-location">Serving Frenchtown & surrounding New Jersey areas</p>
-      <a href="#contact" class="btn">Get a Free Quote</a>
+  <header class="bg-cover bg-center" style="background-image: url('images/hero-cleaning.jpg');">
+    <div class="bg-black bg-opacity-50">
+      <div class="max-w-4xl mx-auto text-center py-24 px-6">
+        <h1 class="text-4xl md:text-5xl font-bold text-white">Wonderwoman Cleaning</h1>
+        <p class="mt-4 text-lg text-white">Professional House Cleaning in Frenchtown, New Jersey</p>
+        <a href="#contact" class="mt-8 inline-block bg-yellow-400 text-black font-semibold py-3 px-6 rounded shadow hover:bg-yellow-500 transition">
+          Get Your Free Quote
+        </a>
+      </div>
     </div>
   </header>
 
   <!-- SERVICES -->
-  <section class="services">
-    <h2>Our Cleaning Services</h2>
-    <p class="section-intro">
-      We provide dependable, detail-focused cleaning for homes and small businesses.
-    </p>
+  <section class="py-16 bg-gray-50">
+    <div class="max-w-6xl mx-auto px-6 text-center">
+      <h2 class="text-3xl font-bold">Our Cleaning Services</h2>
+      <p class="mt-2 text-gray-600">Quality and care for every home and office.</p>
 
-    <div class="service-grid">
-      <div class="service-card">
-        <h3>Residential Cleaning</h3>
-        <p>Routine and one-time cleanings to keep your home fresh and comfortable.</p>
-      </div>
+      <div class="mt-10 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
+        <div class="bg-white p-6 rounded shadow text-center">
+          <img src="images/residential.jpg" alt="Residential Cleaning" class="w-20 h-20 mx-auto mb-4">
+          <h3 class="font-semibold text-xl">Residential</h3>
+          <p class="mt-2 text-gray-600">Routine & deep cleaning for homes.</p>
+        </div>
 
-      <div class="service-card">
-        <h3>Deep Cleaning</h3>
-        <p>Thorough top-to-bottom cleaning for kitchens, bathrooms, and living spaces.</p>
-      </div>
+        <div class="bg-white p-6 rounded shadow text-center">
+          <img src="images/deep-clean.jpg" alt="Deep Cleaning" class="w-20 h-20 mx-auto mb-4">
+          <h3 class="font-semibold text-xl">Deep Clean</h3>
+          <p class="mt-2 text-gray-600">Top-to-bottom detailed cleans.</p>
+        </div>
 
-      <div class="service-card">
-        <h3>Move-In / Move-Out</h3>
-        <p>Perfect for transitions, rentals, and preparing a space for new occupants.</p>
-      </div>
+        <div class="bg-white p-6 rounded shadow text-center">
+          <img src="images/move-in.jpg" alt="Move In/Out" class="w-20 h-20 mx-auto mb-4">
+          <h3 class="font-semibold text-xl">Move In/Out</h3>
+          <p class="mt-2 text-gray-600">Perfect for relocations.</p>
+        </div>
 
-      <div class="service-card">
-        <h3>Office Cleaning</h3>
-        <p>Reliable cleaning for offices and small commercial spaces.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- ABOUT -->
-  <section class="about">
-    <div class="about-content">
-      <div class="about-text">
-        <h2>Why Choose Wonderwoman Cleaning?</h2>
-        <p>
-          Wonderwoman Cleaning is built on reliability, attention to detail,
-          and respect for your space. We take pride in delivering consistent,
-          high-quality results every visit.
-        </p>
-        <ul>
-          <li>✔ Locally owned & operated</li>
-          <li>✔ Trusted, detail-focused service</li>
-          <li>✔ Flexible scheduling</li>
-          <li>✔ Satisfaction-focused cleaning</li>
-        </ul>
-      </div>
-
-      <!-- IMAGE PLACEHOLDER -->
-      <div class="about-image">
-        <!-- Replace src with real image later -->
-        <img src="images/about-placeholder.jpg" alt="Professional home cleaning service" />
+        <div class="bg-white p-6 rounded shadow text-center">
+          <img src="images/office.jpg" alt="Office Cleaning" class="w-20 h-20 mx-auto mb-4">
+          <h3 class="font-semibold text-xl">Office</h3>
+          <p class="mt-2 text-gray-600">Small businesses & office spaces.</p>
+        </div>
       </div>
     </div>
   </section>
 
   <!-- GALLERY -->
-  <section class="gallery">
-    <h2>Our Work</h2>
-    <p class="section-intro">
-      A glimpse at the spaces we’ve helped keep spotless.
-    </p>
+  <section class="py-16">
+    <div class="max-w-6xl mx-auto px-6 text-center">
+      <h2 class="text-3xl font-bold">Our Work Gallery</h2>
+      <p class="mt-2 text-gray-600">Real spaces we’ve helped clean and refresh.</p>
 
-    <div class="gallery-grid">
-      <img src="images/clean1.jpg" alt="Clean kitchen" />
-      <img src="images/clean2.jpg" alt="Clean bathroom" />
-      <img src="images/clean3.jpg" alt="Clean living room" />
+      <div class="mt-8 grid grid-cols-2 md:grid-cols-4 gap-4">
+        <img src="images/clean1.jpg" class="w-full rounded shadow" alt="Clean kitchen">
+        <img src="images/clean2.jpg" class="w-full rounded shadow" alt="Clean bathroom">
+        <img src="images/clean3.jpg" class="w-full rounded shadow" alt="Clean living room">
+        <img src="images/clean4.jpg" class="w-full rounded shadow" alt="Clean bedroom">
+      </div>
+    </div>
+  </section>
+
+  <!-- TESTIMONIALS -->
+  <section class="py-16 bg-gray-100">
+    <div class="max-w-5xl mx-auto px-6 text-center">
+      <h2 class="text-3xl font-bold">What Clients Say</h2>
+      <div class="mt-10 space-y-8">
+        <blockquote class="bg-white p-6 rounded shadow">
+          <p class="italic">"Wonderful service — our house has never been cleaner!"</p>
+          <footer class="mt-4 text-sm text-gray-700">— Happy Customer, Frenchtown</footer>
+        </blockquote>
+        <blockquote class="bg-white p-6 rounded shadow">
+          <p class="italic">"Fast, reliable, and thorough. Highly recommend!"</p>
+          <footer class="mt-4 text-sm text-gray-700">— Local Resident</footer>
+        </blockquote>
+      </div>
     </div>
   </section>
 
   <!-- CONTACT -->
-  <section class="contact" id="contact">
-    <h2>Get in Touch</h2>
-    <p>
-      Looking for reliable cleaning services in Frenchtown, New Jersey?
-      Reach out today for a free quote.
-    </p>
+  <section id="contact" class="py-16">
+    <div class="max-w-4xl mx-auto px-6 text-center">
+      <h2 class="text-3xl font-bold">Get in Touch</h2>
+      <p class="mt-2 text-gray-600">Contact us for a free quote.</p>
 
-    <p class="contact-details">
-      📞 <a href="tel:+1PHONE_NUMBER">PHONE_NUMBER</a><br />
-      ✉️ <a href="mailto:EMAIL_ADDRESS">EMAIL_ADDRESS</a>
-    </p>
+      <p class="mt-4 text-lg font-semibold">
+        📞 <a href="tel:+1PHONE_NUMBER" class="text-blue-600 hover:underline">PHONE_NUMBER</a><br />
+        ✉️ <a href="mailto:EMAIL_ADDRESS" class="text-blue-600 hover:underline">EMAIL_ADDRESS</a>
+      </p>
+
+      <a href="mailto:EMAIL_ADDRESS" class="mt-6 inline-block bg-blue-600 text-white py-3 px-8 rounded hover:bg-blue-700 transition">
+        Email Us Now
+      </a>
+    </div>
   </section>
 
   <!-- FOOTER -->
-  <footer>
+  <footer class="bg-gray-800 text-white py-6 text-center">
     <p>Wonderwoman Cleaning • Frenchtown, New Jersey</p>
-    <p>&copy; 2026 Wonderwoman Cleaning</p>
+    <p class="text-sm">&copy; 2026 Wonderwoman Cleaning</p>
   </footer>
 
-  <!-- Local Business Schema -->
-  <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "CleaningService",
-      "name": "Wonderwoman Cleaning",
-      "areaServed": {
-        "@type": "Place",
-        "name": "Frenchtown, New Jersey"
-      },
-      "telephone": "+1PHONE_NUMBER",
-      "url": "https://YOUR_USERNAME.github.io/wonderwoman-cleaning/"
-    }
-  </script>
-
-  <script src="script.js"></script>
 </body>
 </html>
