--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Wonderwoman Cleaning | Professional House Cleaning in Frenchtown, New Jersey</title>
+  <title>WonderWoman Cleaning | Professional House Cleaning in Frenchtown, New Jersey</title>
   <meta
     name="description"
-    content="Wonderwoman Cleaning offers professional house cleaning services in Frenchtown, New Jersey. Reliable, thorough, and detail-oriented."
+    content="WonderWoman Cleaning offers professional house cleaning services in Frenchtown, New Jersey. Reliable, thorough, and detail-oriented."
   />
 
   <!-- Tailwind via CDN -->
@@ -19,7 +19,7 @@
   <header class="bg-cover bg-center" style="background-image: url('images/hero-cleaning.jpg');">
     <div class="bg-black bg-opacity-50">
       <div class="max-w-4xl mx-auto text-center py-24 px-6">
-        <h1 class="text-4xl md:text-5xl font-bold text-white">Wonderwoman Cleaning</h1>
+        <h1 class="text-4xl md:text-5xl font-bold text-white">WonderWoman Cleaning</h1>
         <p class="mt-4 text-lg text-white">Professional House Cleaning in Frenchtown, New Jersey</p>
         <a href="#contact" class="mt-8 inline-block bg-yellow-400 text-black font-semibold py-3 px-6 rounded shadow hover:bg-yellow-500 transition">
           Get Your Free Quote
@@ -113,8 +113,8 @@
 
   <!-- FOOTER -->
   <footer class="bg-gray-800 text-white py-6 text-center">
-    <p>Wonderwoman Cleaning • Frenchtown, New Jersey</p>
-    <p class="text-sm">&copy; 2026 Wonderwoman Cleaning</p>
+    <p>WonderWoman Cleaning • Frenchtown, New Jersey</p>
+    <p class="text-sm">&copy; 2026 WonderWoman Cleaning</p>
   </footer>
 
 </body>
