--- a/index.html
+++ b/index.html
@@ -5,117 +5,168 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <title>WonderWoman Cleaning | Professional House Cleaning in Frenchtown, New Jersey</title>
-  <meta
-    name="description"
-    content="WonderWoman Cleaning offers professional house cleaning services in Frenchtown, New Jersey. Reliable, thorough, and detail-oriented."
-  />
+  <meta name="description" content="WonderWoman Cleaning offers professional house cleaning services in Frenchtown, New Jersey. Reliable, thorough, and detail-oriented." />
 
-  <!-- Tailwind via CDN -->
+  <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Brand color -->
+  <style>
+    :root {
+      --brand: #2596be;
+    }
+
+    /* Scroll animations */
+    .fade-in {
+      opacity: 0;
+      transform: translateY(20px);
+      transition: all 0.7s ease;
+    }
+    .fade-in.show {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    /* Lightbox */
+    #lightbox {
+      display: none;
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,.85);
+      z-index: 50;
+      justify-content: center;
+      align-items: center;
+    }
+    #lightbox img {
+      max-width: 90%;
+      max-height: 90%;
+      border-radius: 0.5rem;
+    }
+  </style>
 </head>
+
 <body class="text-gray-800 font-sans">
 
-  <!-- HERO -->
-  <header class="bg-cover bg-center" style="background-image: url('images/hero-cleaning.jpg');">
-    <div class="bg-black bg-opacity-50">
-      <div class="max-w-4xl mx-auto text-center py-24 px-6">
-        <h1 class="text-4xl md:text-5xl font-bold text-white">WonderWoman Cleaning</h1>
-        <p class="mt-4 text-lg text-white">Professional House Cleaning in Frenchtown, New Jersey</p>
-        <a href="#contact" class="mt-8 inline-block bg-yellow-400 text-black font-semibold py-3 px-6 rounded shadow hover:bg-yellow-500 transition">
-          Get Your Free Quote
-        </a>
-      </div>
-    </div>
-  </header>
+<!-- STICKY HEADER -->
+<header class="sticky top-0 z-40 bg-white shadow">
+  <div class="max-w-7xl mx-auto px-6 py-3 flex justify-between items-center">
+    <span class="font-bold text-lg text-[var(--brand)]">WonderWoman Cleaning</span>
+    <a href="tel:+1PHONE_NUMBER"
+       class="bg-[var(--brand)] text-white px-5 py-2 rounded-full font-semibold hover:opacity-90 transition">
+      📞 Call Now
+    </a>
+  </div>
+</header>
 
-  <!-- SERVICES -->
-  <section class="py-16 bg-gray-50">
-    <div class="max-w-6xl mx-auto px-6 text-center">
-      <h2 class="text-3xl font-bold">Our Cleaning Services</h2>
-      <p class="mt-2 text-gray-600">Quality and care for every home and office.</p>
-
-      <div class="mt-10 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
-        <div class="bg-white p-6 rounded shadow text-center">
-          <img src="images/residential.jpg" alt="Residential Cleaning" class="w-20 h-20 mx-auto mb-4">
-          <h3 class="font-semibold text-xl">Residential</h3>
-          <p class="mt-2 text-gray-600">Routine & deep cleaning for homes.</p>
-        </div>
-
-        <div class="bg-white p-6 rounded shadow text-center">
-          <img src="images/deep-clean.jpg" alt="Deep Cleaning" class="w-20 h-20 mx-auto mb-4">
-          <h3 class="font-semibold text-xl">Deep Clean</h3>
-          <p class="mt-2 text-gray-600">Top-to-bottom detailed cleans.</p>
-        </div>
-
-        <div class="bg-white p-6 rounded shadow text-center">
-          <img src="images/move-in.jpg" alt="Move In/Out" class="w-20 h-20 mx-auto mb-4">
-          <h3 class="font-semibold text-xl">Move In/Out</h3>
-          <p class="mt-2 text-gray-600">Perfect for relocations.</p>
-        </div>
-
-        <div class="bg-white p-6 rounded shadow text-center">
-          <img src="images/office.jpg" alt="Office Cleaning" class="w-20 h-20 mx-auto mb-4">
-          <h3 class="font-semibold text-xl">Office</h3>
-          <p class="mt-2 text-gray-600">Small businesses & office spaces.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- GALLERY -->
-  <section class="py-16">
-    <div class="max-w-6xl mx-auto px-6 text-center">
-      <h2 class="text-3xl font-bold">Our Work Gallery</h2>
-      <p class="mt-2 text-gray-600">Real spaces we’ve helped clean and refresh.</p>
-
-      <div class="mt-8 grid grid-cols-2 md:grid-cols-4 gap-4">
-        <img src="images/clean1.jpg" class="w-full rounded shadow" alt="Clean kitchen">
-        <img src="images/clean2.jpg" class="w-full rounded shadow" alt="Clean bathroom">
-        <img src="images/clean3.jpg" class="w-full rounded shadow" alt="Clean living room">
-        <img src="images/clean4.jpg" class="w-full rounded shadow" alt="Clean bedroom">
-      </div>
-    </div>
-  </section>
-
-  <!-- TESTIMONIALS -->
-  <section class="py-16 bg-gray-100">
-    <div class="max-w-5xl mx-auto px-6 text-center">
-      <h2 class="text-3xl font-bold">What Clients Say</h2>
-      <div class="mt-10 space-y-8">
-        <blockquote class="bg-white p-6 rounded shadow">
-          <p class="italic">"Wonderful service — our house has never been cleaner!"</p>
-          <footer class="mt-4 text-sm text-gray-700">— Happy Customer, Frenchtown</footer>
-        </blockquote>
-        <blockquote class="bg-white p-6 rounded shadow">
-          <p class="italic">"Fast, reliable, and thorough. Highly recommend!"</p>
-          <footer class="mt-4 text-sm text-gray-700">— Local Resident</footer>
-        </blockquote>
-      </div>
-    </div>
-  </section>
-
-  <!-- CONTACT -->
-  <section id="contact" class="py-16">
-    <div class="max-w-4xl mx-auto px-6 text-center">
-      <h2 class="text-3xl font-bold">Get in Touch</h2>
-      <p class="mt-2 text-gray-600">Contact us for a free quote.</p>
-
-      <p class="mt-4 text-lg font-semibold">
-        📞 <a href="tel:+1PHONE_NUMBER" class="text-blue-600 hover:underline">PHONE_NUMBER</a><br />
-        ✉️ <a href="mailto:EMAIL_ADDRESS" class="text-blue-600 hover:underline">EMAIL_ADDRESS</a>
+<!-- HERO -->
+<section class="bg-cover bg-center" style="background-image: url('images/hero-cleaning.jpg');">
+  <div class="bg-black bg-opacity-50">
+    <div class="max-w-4xl mx-auto text-center py-28 px-6 fade-in">
+      <h1 class="text-4xl md:text-5xl font-bold text-white">
+        Professional House Cleaning
+      </h1>
+      <p class="mt-4 text-lg text-white">
+        Serving Frenchtown, New Jersey & Surrounding Areas
       </p>
-
-      <a href="mailto:EMAIL_ADDRESS" class="mt-6 inline-block bg-blue-600 text-white py-3 px-8 rounded hover:bg-blue-700 transition">
-        Email Us Now
+      <a href="#contact"
+         class="mt-8 inline-block bg-[var(--brand)] text-white font-semibold py-4 px-8 rounded shadow hover:opacity-90 transition">
+        Get Your Free Quote
       </a>
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- FOOTER -->
-  <footer class="bg-gray-800 text-white py-6 text-center">
-    <p>WonderWoman Cleaning • Frenchtown, New Jersey</p>
-    <p class="text-sm">&copy; 2026 WonderWoman Cleaning</p>
-  </footer>
+<!-- SERVICES -->
+<section class="py-20 bg-gray-50">
+  <div class="max-w-6xl mx-auto px-6 text-center fade-in">
+    <h2 class="text-3xl font-bold mb-2">Our Cleaning Services</h2>
+    <div class="w-16 h-1 bg-[var(--brand)] mx-auto mb-10"></div>
+
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
+      <div class="bg-white p-8 rounded shadow">
+        <h3 class="font-semibold text-xl text-[var(--brand)]">Residential</h3>
+        <p class="mt-3 text-gray-600">Routine & deep cleaning for homes.</p>
+      </div>
+      <div class="bg-white p-8 rounded shadow">
+        <h3 class="font-semibold text-xl text-[var(--brand)]">Deep Clean</h3>
+        <p class="mt-3 text-gray-600">Top-to-bottom detailed cleans.</p>
+      </div>
+      <div class="bg-white p-8 rounded shadow">
+        <h3 class="font-semibold text-xl text-[var(--brand)]">Move In / Out</h3>
+        <p class="mt-3 text-gray-600">Perfect for relocations.</p>
+      </div>
+      <div class="bg-white p-8 rounded shadow">
+        <h3 class="font-semibold text-xl text-[var(--brand)]">Office</h3>
+        <p class="mt-3 text-gray-600">Small business & office spaces.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- GALLERY -->
+<section class="py-20">
+  <div class="max-w-6xl mx-auto px-6 text-center fade-in">
+    <h2 class="text-3xl font-bold mb-2">Our Work</h2>
+    <div class="w-16 h-1 bg-[var(--brand)] mx-auto mb-10"></div>
+
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+      <img src="images/clean1.jpg" class="gallery-img cursor-pointer rounded shadow-lg" alt="Clean kitchen">
+      <img src="images/clean2.jpg" class="gallery-img cursor-pointer rounded shadow-lg" alt="Clean bathroom">
+      <img src="images/clean3.jpg" class="gallery-img cursor-pointer rounded shadow-lg" alt="Clean living room">
+      <img src="images/clean4.jpg" class="gallery-img cursor-pointer rounded shadow-lg" alt="Clean bedroom">
+    </div>
+  </div>
+</section>
+
+<!-- CONTACT -->
+<section id="contact" class="py-20 bg-gray-50">
+  <div class="max-w-4xl mx-auto px-6 text-center fade-in">
+    <h2 class="text-3xl font-bold mb-2">Get a Free Quote</h2>
+    <div class="w-16 h-1 bg-[var(--brand)] mx-auto mb-6"></div>
+
+    <p class="text-lg font-semibold">
+      📞 <a href="tel:+1PHONE_NUMBER" class="text-[var(--brand)] hover:underline">PHONE_NUMBER</a><br>
+      ✉️ <a href="mailto:EMAIL_ADDRESS" class="text-[var(--brand)] hover:underline">EMAIL_ADDRESS</a>
+    </p>
+  </div>
+</section>
+
+<!-- FOOTER -->
+<footer class="bg-gray-800 text-white py-6 text-center">
+  <p>WonderWoman Cleaning • Frenchtown, New Jersey</p>
+  <p class="text-sm">&copy; 2026 WonderWoman Cleaning</p>
+</footer>
+
+<!-- LIGHTBOX -->
+<div id="lightbox" class="flex">
+  <img src="" alt="">
+</div>
+
+<!-- JS -->
+<script>
+  // Scroll animations
+  const observer = new IntersectionObserver(entries => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) entry.target.classList.add('show');
+    });
+  });
+  document.querySelectorAll('.fade-in').forEach(el => observer.observe(el));
+
+  // Lightbox
+  const lightbox = document.getElementById('lightbox');
+  const lightboxImg = lightbox.querySelector('img');
+
+  document.querySelectorAll('.gallery-img').forEach(img => {
+    img.addEventListener('click', () => {
+      lightboxImg.src = img.src;
+      lightbox.style.display = 'flex';
+    });
+  });
+
+  lightbox.addEventListener('click', () => {
+    lightbox.style.display = 'none';
+  });
+</script>
 
 </body>
 </html>
