added more image

--- a/index.html
+++ b/index.html
@@ -83,21 +83,32 @@
     <div class="w-16 h-1 bg-[var(--brand)] mx-auto mb-10"></div>
 
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
-      <div class="bg-white p-8 rounded shadow">
+      <div class="bg-white p-6 rounded shadow">
+        <img src="images/residential.jpg" alt="Residential Cleaning"
+             class="w-full h-40 object-cover rounded mb-4">
         <h3 class="font-semibold text-xl text-[var(--brand)]">Residential</h3>
-        <p class="mt-3 text-gray-600">Routine & deep cleaning for homes.</p>
+        <p class="mt-2 text-gray-600">Routine & deep cleaning for homes.</p>
       </div>
-      <div class="bg-white p-8 rounded shadow">
+
+      <div class="bg-white p-6 rounded shadow">
+        <img src="images/deep-clean.jpg" alt="Deep Cleaning"
+             class="w-full h-40 object-cover rounded mb-4">
         <h3 class="font-semibold text-xl text-[var(--brand)]">Deep Clean</h3>
-        <p class="mt-3 text-gray-600">Top-to-bottom detailed cleans.</p>
+        <p class="mt-2 text-gray-600">Top-to-bottom detailed cleans.</p>
       </div>
-      <div class="bg-white p-8 rounded shadow">
+
+      <div class="bg-white p-6 rounded shadow">
+        <img src="images/move-in.jpg" alt="Move In Out Cleaning"
+             class="w-full h-40 object-cover rounded mb-4">
         <h3 class="font-semibold text-xl text-[var(--brand)]">Move In / Out</h3>
-        <p class="mt-3 text-gray-600">Perfect for relocations.</p>
+        <p class="mt-2 text-gray-600">Perfect for relocations.</p>
       </div>
-      <div class="bg-white p-8 rounded shadow">
+
+      <div class="bg-white p-6 rounded shadow">
+        <img src="images/office.jpg" alt="Office Cleaning"
+             class="w-full h-40 object-cover rounded mb-4">
         <h3 class="font-semibold text-xl text-[var(--brand)]">Office</h3>
-        <p class="mt-3 text-gray-600">Small business & office spaces.</p>
+        <p class="mt-2 text-gray-600">Small business & office spaces.</p>
       </div>
     </div>
   </div>
@@ -107,14 +118,29 @@
 <section class="py-20">
   <div class="max-w-6xl mx-auto px-6 text-center fade-in">
     <h2 class="text-3xl font-bold mb-2">Our Work</h2>
-    <div class="w-16 h-1 bg-[var(--brand)] mx-auto mb-10"></div>
+    <div class="w-16 h-1 bg-[var(--brand)] mx-auto mb-8"></div>
 
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
-      <img src="images/clean1.jpg" class="gallery-img cursor-pointer rounded shadow-lg" alt="Clean kitchen">
-      <img src="images/clean2.jpg" class="gallery-img cursor-pointer rounded shadow-lg" alt="Clean bathroom">
-      <img src="images/clean3.jpg" class="gallery-img cursor-pointer rounded shadow-lg" alt="Clean living room">
-      <img src="images/clean4.jpg" class="gallery-img cursor-pointer rounded shadow-lg" alt="Clean bedroom">
+    <div class="flex gap-6 overflow-x-auto pb-4 snap-x snap-mandatory">
+      <img src="images/clean1.jpg"
+           class="gallery-img snap-center min-w-[300px] h-64 object-cover rounded shadow-lg cursor-pointer"
+           alt="Clean kitchen">
+
+      <img src="images/clean2.jpg"
+           class="gallery-img snap-center min-w-[300px] h-64 object-cover rounded shadow-lg cursor-pointer"
+           alt="Clean bathroom">
+
+      <img src="images/clean3.jpg"
+           class="gallery-img snap-center min-w-[300px] h-64 object-cover rounded shadow-lg cursor-pointer"
+           alt="Clean living room">
+
+      <img src="images/clean4.jpg"
+           class="gallery-img snap-center min-w-[300px] h-64 object-cover rounded shadow-lg cursor-pointer"
+           alt="Clean bedroom">
     </div>
+
+    <p class="text-sm text-gray-500 mt-4">
+      ← Scroll to view more →
+    </p>
   </div>
 </section>
 
