add more images

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </section>
 
 <!-- SERVICES -->
-<section class="py-20 bg-gray-50">
+<section class="py-12 bg-gray-50">
   <div class="max-w-6xl mx-auto px-6 text-center fade-in">
     <h2 class="text-3xl font-bold mb-2">Our Cleaning Services</h2>
     <div class="w-16 h-1 bg-[var(--brand)] mx-auto mb-10"></div>
@@ -125,7 +125,7 @@
 </section>
 
 <!-- GALLERY -->
-<section class="py-20">
+<section class="py-12">
   <div class="max-w-6xl mx-auto px-6 text-center fade-in">
     <h2 class="text-3xl font-bold mb-2">Our Work</h2>
     <div class="w-16 h-1 bg-[var(--brand)] mx-auto mb-8"></div>
@@ -152,7 +152,7 @@
 </section>
 
 <!-- CONTACT -->
-<section id="contact" class="py-20 bg-gray-50">
+<section id="contact" class="py-12 bg-gray-50">
   <div class="max-w-4xl mx-auto px-6 text-center fade-in">
     <h2 class="text-3xl font-bold mb-2">Get a Free Quote</h2>
     <div class="w-16 h-1 bg-[var(--brand)] mx-auto mb-6"></div>
@@ -188,7 +188,10 @@
     'images/clean1.jpg',
     'images/clean2.jpg',
     'images/clean3.jpg',
-    'images/clean4.jpg'
+    'images/clean4.jpg',
+    'images/clean5.jpg',
+    'images/clean6.jpg',
+    'images/clean7.jpg'
   ];
 
   const CARD_WIDTH = 340;
